log_terminal.txt
PS C:\Users\Anderson\.vscode\exe.python.script\analise_dados> python
>> 
Python 3.13.4 (tags/v3.13.4:8a526ec, Jun  3 2025, 17:46:04) [MSC v.1943 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import pandas as pd
>>> import seaborn as sns
Matplotlib is building the font cache; this may take a moment.
>>> import matplotlib.pyplot as plt
>>> # Carregar o dataset
>>> df = sns.load_dataset('tips')
>>> 
>>> # Ver as 5 primeiras linhas
>>> print(df.head())
   total_bill   tip     sex smoker  day    time  size
0       16.99  1.01  Female     No  Sun  Dinner     2
1       10.34  1.66    Male     No  Sun  Dinner     3
2       21.01  3.50    Male     No  Sun  Dinner     3
3       23.68  3.31    Male     No  Sun  Dinner     2
4       24.59  3.61  Female     No  Sun  Dinner     4
>>> 
>>> # Informações gerais
>>> print(df.info())
<class 'pandas.core.frame.DataFrame'>
RangeIndex: 244 entries, 0 to 243
Data columns (total 7 columns):
 #   Column      Non-Null Count  Dtype
---  ------      --------------  -----
 0   total_bill  244 non-null    float64
 1   tip         244 non-null    float64
 2   sex         244 non-null    category
 3   smoker      244 non-null    category
 4   day         244 non-null    category
 5   time        244 non-null    category
 6   size        244 non-null    int64
dtypes: category(4), float64(2), int64(1)
memory usage: 7.4 KB
None
>>> 
>>> # Análise estatística
>>> print(df.describe())
       total_bill         tip        size
count  244.000000  244.000000  244.000000
mean    19.785943    2.998279    2.569672
std      8.902412    1.383638    0.951100
min      3.070000    1.000000    1.000000
25%     13.347500    2.000000    2.000000
50%     17.795000    2.900000    2.000000
75%     24.127500    3.562500    3.000000
max     50.810000   10.000000    6.000000
>>> 
>>> # Gráfico simples: gorjeta por dia
>>> sns.boxplot(x='day', y='tip', data=df)
<Axes: xlabel='day', ylabel='tip'>
>>> plt.show()python analise_tips.py
    plt.show()python analise_tips.py
SyntaxError: invalid syntax
>>> python analise_tips.py
  File "<python-input-18>", line 1
    python analise_tips.py
           ^^^^^^^^^^^^
SyntaxError: invalid syntax
>>> exit()
PS C:\Users\Anderson\.vscode\exe.python.script\analise_dados>
PS C:\Users\Anderson\.vscode\exe.python.script\analise_dados> python analise_tips.py
>>
Primeiras 5 linhas do dataset:
   total_bill   tip     sex smoker  day    time  size
0       16.99  1.01  Female     No  Sun  Dinner     2
1       10.34  1.66    Male     No  Sun  Dinner     3
2       21.01  3.50    Male     No  Sun  Dinner     3
3       23.68  3.31    Male     No  Sun  Dinner     2
4       24.59  3.61  Female     No  Sun  Dinner     4

Informações gerais:
<class 'pandas.core.frame.DataFrame'>
RangeIndex: 244 entries, 0 to 243
Data columns (total 7 columns):
 #   Column      Non-Null Count  Dtype
---  ------      --------------  -----
 0   total_bill  244 non-null    float64
 1   tip         244 non-null    float64
 2   sex         244 non-null    category
 3   smoker      244 non-null    category
 4   day         244 non-null    category
 5   time        244 non-null    category
 6   size        244 non-null    int64
dtypes: category(4), float64(2), int64(1)
memory usage: 7.4 KB
None

Estatísticas descritivas:
       total_bill         tip        size
count  244.000000  244.000000  244.000000
mean    19.785943    2.998279    2.569672
min      3.070000    1.000000    1.000000
25%     13.347500    2.000000    2.000000
75%     24.127500    3.562500    3.000000
